--- a/networkPolicy/networkpolicy.yaml
+++ b/networkPolicy/networkpolicy.yaml
@@ -1,11 +1,29 @@
+# apiVersion: networking.k8s.io/v1
+# kind: NetworkPolicy
+# metadata:
+#   name: networkpolicynginx
+# spec:
+#   podSelector:
+#     matchLabels:
+#       app: nginx
+#   ingress:
+#   - ports:
+#     - port: 80
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: networkpolicynginx
+  name: restrict-tondu-ingress
 spec:
   podSelector:
     matchLabels:
       app: nginx
+  policyTypes:
+  - Ingress
   ingress:
-  - ports:
-    - port: 82
+  - from:
+    - podSelector:
+        matchLabels:
+          app: nginx
+    ports:
+    - port: 443
+      protocol: TCP
